objects/dsfs__EnvelopeLocalization__c.object
<CustomObject>
    <fields>
        <fullName>dsfs__EmailMessage__c</fullName>
        <description>Email Message</description>
        <label>Email Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject__c</fullName>
        <description>Email Subject</description>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Locale__c</fullName>
        <description>Locale</description>
        <label>Locale</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DocuSign Localization</label>
    <nameField>
        <label>Language</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Localizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>